@@ -1,3 +1,8 @@
+Courtney Cavin - Sun Jul 10 2005
+	added browser directory sorting, case-insensitive alpha, dirs first
+	added 'Show Hidden Files' setting
+	changed '..' to '.. [Parent Directory]'
+
 Scott Lawrence - Sat Jul 9 2005
 	Added appearance-based color scheming support
 	Added color scheme to settings, message, fixes for games, etc
